--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/lodash": "^4.17.23",
     "@types/morgan": "^1.9.10",
+    "@types/multer": "^2.0.0",
     "@types/pg": "^8.16.0",
     "@types/socket.io": "^3.0.1",
     "nodemon": "^3.1.11",
@@ -38,6 +39,7 @@
     "@prisma/client": "^7.2.0",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.2",
+    "cloudinary": "^2.9.0",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -47,6 +49,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "pg": "^8.17.1",
     "socket.io": "^4.8.3",
     "uuid": "^13.0.0",
