--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,19 @@ node_modules
 /src/generated/prisma
 
 /generated/prisma
+
+# Build directory 🚀
+dist/
+
+# Local env files
+.env
+.env.local
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS metadata
+.DS_Store
+Thumbs.db
